--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,35 @@
+.background {
+  --rlist: var(--c) 0 3px, transparent 0 10px;
+  --dim: 50% no-repeat;
+  --ang: 0deg;
+  --pos-1: 100%;
+  overflow: hidden;
+  position: relative;
+  background: repeating-linear-gradient(var(--ang-0, -45deg), var(--rlist))
+      var(--pos-0, 0 0) / var(--dim),
+    repeating-linear-gradient(var(--ang-1, 45deg), var(--rlist))
+      var(--pos-1, 0 100%) / var(--dim),
+    linear-gradient(var(--ang), var(--nlist));
+  --c: #dfebf0;
+  --nlist: #86e3ff, #e3ecf1;
+  --ang-0: 60deg;
+  --ang-1: -60deg;
+}
+.roboto {
+  font-family: "Roboto Mono", monospace;
+}
+.bellota {
+  font-family: "Bellota", cursive;
+}
+.gradient {
+  background-image: linear-gradient(15deg, #41a5aa 0%, #606af0 100%);
+}
+.text-white {
+  color: white;
+}
+
+
+
 .App {
   text-align: center;
 }
