--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,21 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .background {
+  height: 100% !important;
+  width: 100%  !important;
+  box-sizing: border-box;
+  position: absolute;
+  height: auto;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-size: cover;
   --rlist: var(--c) 0 3px, transparent 0 10px;
   --dim: 50% no-repeat;
   --ang: 0deg;
