--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,3 +3,8 @@
     flex-direction: column;
     align-items: center;
 }
+
+.login-gradient {
+    background-image: linear-gradient(15deg, #70de6d 0%, #67b3d6 100%);
+    border-radius: 25px;
+}
